# VirtualEcosystem

./: .gitignore  CMakeLists.txt  README.md  generatorlosowy.cpp  generatorlosowy.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  start.txt  ustawienia.h  zlab12.cpp  zlab12.h
